tests/FSharp.Compiler.ComponentTests/Conformance/TypeForwarding/NegativeCases/Delegate_NG_NormalDelegate.fs
let nd = new NormalDelegate()
let dele = new DeleNormalDelegate(nd.getValue)
let rv = dele.Invoke()

exit rv

